2014-04-06  Holger Seelig  <holger.seelig@yahoo.de>

	* main.cpp:
	* style.css:
	* X3DBrowserEditor.cpp:
	* X3DBrowserWidget.cpp:
	* Configuration.cpp:
	* Array.h:
	* OutlineCellRenderer.cpp: 

2014-04-05  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.cpp: 

2014-04-05  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.cpp: 

2014-04-05  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineCellRenderer.cpp: 

2014-04-05  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutlineTreeView.cpp:
	* OutlineTreeViewEditor.cpp:
	* inputOnly.1.png:
	* inputOnly.2.png:
	* inputOnly.0.png:
	* outputOnly.0.png:
	* outputOnly.1.png:
	* outputOnly.2.png:
	* inputOutput.2.0.png:
	* inputOutput.2.1.png:
	* inputOutput.2.2.png:
	* inputOutput.1.2.png:
	* inputOutput.0.1.png:
	* inputOutput.0.0.png:
	* inputOutput.0.2.png:
	* inputOutput.1.1.png:
	* inputOutput.1.0.png:
	* OutlineCellRenderer.cpp: 

2014-04-05  Holger Seelig  <holger.seelig@yahoo.de>

	* style.css:
	* X3DBaseNode.svg:
	* OutlineCellRenderer.cpp: 

2014-04-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Console.ui:
	* Console.xml:
	* LibraryView.ui:
	* LibraryView.xml:
	* ViewpointList.ui:
	* BrowserWindow.ui:
	* HistoryEditor.ui:
	* OutlineEditor.ui:
	* ViewpointList.xml:
	* HistoryEditor.xml:
	* BrowserWindow.xml:
	* OutlineEditor.xml:
	* OutlineTreeView.ui:
	* LibraryView.cpp:
	* X3DBrowserWidget.cpp:
	* OutlineTreeView.xml:
	* MotionBlurEditor.ui:
	* MotionBlurEditor.xml:
	* ViewpointList.cpp:
	* TextureEditor.cpp:
	* HistoryEditor.cpp:
	* OutlineEditor.cpp:
	* MaterialEditor.cpp:
	* TextureEditor.ui:
	* TextureEditor.xml:
	* MaterialEditor.ui:
	* MaterialEditor.xml:
	* X3DOutlineTreeView.cpp:
	* MotionBlurEditor.cpp:
	* NodePropertiesEditor.ui:
	* NodePropertiesEditor.xml:
	* NodePropertiesEditor.cpp: 

2014-04-04  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DDialogInterface.cpp:
	* MaterialEditor.ui:
	* TextViewEditable.cpp: 

2014-04-04  Holger Seelig  <holger.seelig@yahoo.de>
